--- a/mens.html
+++ b/mens.html
@@ -6,6 +6,7 @@
     <title>Mens Jackets</title>
     <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
   </head>
+  <h1>mens</h1>
   <body>
     <nav>
       <div class="logo">  <a href="index.html">
@@ -23,16 +24,7 @@
         <li><a href="mens.html">mens</a></li>
         <li><a href="womens.html">womens</a></li>
         <li><a href="explore.html">explore</a></li>
-      <li>
-      <div class="cart">
-        <a href="cart.html">
-        <img
-          src="images/Icon-shopping-cart.png"
-          alt="Icon-shopping-cart"
-          width="20"
-          height="20"
-          />
-        </li>
+        <li><a href="cart.html"><img src="images/Icon-shopping-cart.png" alt="Icon-shopping-cart" width="20" height="20"></a> </li>
         </ul>
     </nav>
     <img
@@ -63,5 +55,14 @@
       height="150px"
       width="120px"
     />
+    <footer>
+      <ul class="social-media">
+        <li><a href="facebook.com"><img src="images/Icon awesome-facebook-f.png" alt="facebook" width="25" height="20"></a></li>
+        <li><a href="instagram.com"><img src="images/Icon awesome-instagram.png" alt="instagram" width="25" height="20"></a></li>
+        <li><a href="youtube.com"><img src="images/Icon awesome-youtube.png" alt="youtube" width="25" height="20"></a></li>
+
+      </ul>
+      <p class="footer-text">&copy 2020</p>
+  </footer>
   </body>
 </html>
