--- a/mensproduct.html
+++ b/mensproduct.html
@@ -8,7 +8,7 @@
     <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
     
   </head>
-  
+  <h1>mensproduct</h1>
   <body>
     <nav>
       <div class="logo">  <a href="index.html">
@@ -49,6 +49,12 @@
     
   </body>
   <footer>
-    <img src="images/Rainydays_slogan1.png" alt="Brand slogan, Pushing the Comfort zone">
-  </footer>
+    <ul class="social-media">
+      <li><a href="facebook.com"><img src="images/Icon awesome-facebook-f.png" alt="facebook" width="25" height="20"></a></li>
+      <li><a href="instagram.com"><img src="images/Icon awesome-instagram.png" alt="instagram" width="25" height="20"></a></li>
+      <li><a href="youtube.com"><img src="images/Icon awesome-youtube.png" alt="youtube" width="25" height="20"></a></li>
+
+    </ul>
+    <p class="footer-text">&copy 2020</p>
+</footer>
 </html>
