--- a/index.html
+++ b/index.html
@@ -24,16 +24,12 @@
 
         </div>
         <ul class="nav-links">
-
+       
           <li><a href="mens.html">mens</a></li>
           <li><a href="womens.html">womens</a></li>
           <li><a href="explore.html">explore</a></li>
-          <li>
-            <div class="cart">
-              <a href="cart.html">
-                <img src="images/Icon-shopping-cart.png" alt="Icon-shopping-cart" width="20" height="20" />
-          </li>
-        </ul>
+          <li><a href="cart.html"><img src="images/Icon-shopping-cart.png" alt="Icon-shopping-cart" width="20" height="20"></a> </li>
+          </ul>
       </nav>
       <h1>RainyDays</h1>
 
@@ -46,14 +42,12 @@
   </main>
 
   <footer>
-    <div class="social-media-box mobile-index">
-      <a class="social-media-icon" href="https://www.facebook.com"><img src="/images/Icon awesome-facebook-f.png"
-          alt="facebook" width="10" height="10" /></a>
+      <ul class="social-media">
+        <li><a href="facebook.com"><img src="images/Icon awesome-facebook-f.png" alt="facebook" width="25" height="20"></a></li>
+        <li><a href="instagram.com"><img src="images/Icon awesome-instagram.png" alt="instagram" width="25" height="20"></a></li>
+        <li><a href="youtube.com"><img src="images/Icon awesome-youtube.png" alt="youtube" width="25" height="20"></a></li>
 
-      <a class="social-media-icon" href="https://www.instagram.com" target="_blank"><img
-          src="/images/Icon awesome-instagram.png" alt="instagram."></a>
-      <a class="social-media-icon" href="https://www.pinterest.com" target="_blank"><img
-          src="/images/Icon awesome-pinterest-p.png" alt="pinterest"></a>
+      </ul>
       <p class="footer-text">&copy 2020</p>
   </footer>
 
