--- a/womens.html
+++ b/womens.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="womens rain jackets and outdoor apparel" />
   </head>
   <body>
+    <h1>womens</h1>
     <nav>
       <div class="logo">  <a href="index.html">
             <img
@@ -25,16 +26,7 @@
         <li><a href="mens.html">mens</a></li>
         <li><a href="womens.html">womens</a></li>
         <li><a href="explore.html">explore</a></li>
-      <li>
-      <div class="cart">
-        <a href="cart.html">
-        <img
-          src="images/Icon-shopping-cart.png"
-          alt="Icon-shopping-cart"
-          width="20"
-          height="20"
-          />
-        </li>
+        <li><a href="cart.html"><img src="images/Icon-shopping-cart.png" alt="Icon-shopping-cart" width="20" height="20"></a> </li>
         </ul>
     </nav>
     
@@ -70,17 +62,14 @@
       height="150px"
       width="120px"
     />
-    <footer> <div class="social-media-box mobile-index">
-      <a class="social-media-icon" href="https://www.facebook.com" ><img
-              src="/images/Icon awesome-facebook-f.png" alt="facebook"
+    <footer>
+      <ul class="social-media">
+        <li><a href="facebook.com"><img src="images/Icon awesome-facebook-f.png" alt="facebook" width="25" height="20"></a></li>
+        <li><a href="instagram.com"><img src="images/Icon awesome-instagram.png" alt="instagram" width="25" height="20"></a></li>
+        <li><a href="youtube.com"><img src="images/Icon awesome-youtube.png" alt="youtube" width="25" height="20"></a></li>
 
-            width= "10"
-            height= "10"/></a>
-
-      <a class="social-media-icon" href="https://www.instagram.com" target="_blank"><img
-              src="/images/Icon awesome-instagram.png" alt="instagram."></a>
-      <a class="social-media-icon" href="https://www.pinterest.com" target="_blank"><img
-              src="/images/Icon awesome-pinterest-p.png" alt="pinterest"></a>
-      <p class="footer-text">&copy 2020</p>  </footer>
+      </ul>
+      <p class="footer-text">&copy 2020</p>
+  </footer>
   </body>
 </html>
