--- a/checkoutcomplete.html
+++ b/checkoutcomplete.html
@@ -29,6 +29,7 @@
           </ul>
       </nav>
       <div class="cont">
+        <p>Checkout Complete</p>
       <a href="index.html"><button onclick>continue shopping</button></a></div>
     </body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, ad! Vero, quaerat ab! Nulla voluptas assumenda voluptatem rem, amet ratione, quasi consequatur nisi officia doloremque commodi sed ex debitis ipsam.</p>
