--- a/womens.html
+++ b/womens.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/womens.css" />
     <title>Womens Jackets</title>
+    <meta charset="UTF-8">
     <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="womens rain jackets" />
     <meta name="keywords" content="womens rain jackets and outdoor apparel" />
