--- a/mens.html
+++ b/mens.html
@@ -5,6 +5,11 @@
     <link rel="stylesheet" href="styles/mens.css" />
     <title>Mens Jackets</title>
     <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta
+      name="keywords"
+      content="Outdoor apparel, womens rain Jackets, mens rain Jackets"
+    />
   </head>
   <h1>mens</h1>
   <body>
