--- a/mensproduct.html
+++ b/mensproduct.html
@@ -6,6 +6,10 @@
     <meta charset="UTF-8">
     <title>Mens Jacket </title>
     <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="Outdoor apparel, womens rain Jackets, mens rain Jackets"
+    />
     
   </head>
   <h1>mensproduct</h1>
@@ -45,7 +49,7 @@
       height="50%"
       width="50%"
     />
-    <a href="checkout.html"><button onclick >Add to cart</button></a>
+    <a href="cart.html"><button onclick >Add to cart</button></a>
     
   </body>
   <footer>
